# face_rec

./: .dockerignore  .env  .gitattributes  .gitignore  Dockerfile  Dockerfile-hailo  HETEROGENEOUS_INFERENCE_README.md  README.md  debug_mqtt_fix.py  docker-compose-hailo.yml  docker-compose.yml  mqtt_test.ipynb  pyproject.toml  requirements.txt  run.py  start.sh  test.txt  提示词.txt
.codebuddy/: analysis-summary.json
app/: database.py  main.py  人脸识别系统构建综合指南.md  人脸识别规范文档.md
app/cfg/: config.py  default.yaml  development.yaml  logging.py  mqtt_client.py  mqtt_manager.py  production.yaml
app/core/: degirum_cleanup.py  inference_adapter.py  model_manager.py  pipeline.py  result_processor.py
app/inference/: __init__.py  base.py  factory.py  models.py
app/models/: detected_results.py
app/router/: detection_router.py  face_router.py
app/schema/: detection_schema.py  face_schema.py
data/: dev.db  prod.db
docker/: Dockerfile  README.md  docker-compose.yml  start.sh
test/: README.md  analyze_mqtt_issue.py  check_registration.py  compare_alignment_methods.py  compare_images.py  debug_detection_flow.py  debug_detection_output.py  debug_face_recognition.py  debug_keypoints.py  debug_matching.py  debug_mqtt_issue.py  debug_mqtt_real.py  debug_mqtt_registration.py  hailo_face_recognition_degirium_test.py  result_degirium.json  simple_debug.py  test_all_devices_fix.py  test_fix.py  test_fix_final.py  test_imgs.py  test_mqtt_image.py  test_mqtt_registration.py  test_pipeline_stop.py  test_registered_faces.py  test_simple_stop.py  test_sync_multi_images.py  verify_sync_multi.py  verify_system.py
ui/: old_ui.py  requirements.txt  ui.py
(+406 files in other folders)
