[project]
name = "test"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "av>=14.4.0",
    "dlib==19.17.0",
    "fastapi[standard]>=0.115.12",
    "loguru>=0.7.3",
    "numpy==1.22.0",
    "opencv-python>=4.7.0.72",
    "pandas==1.3.4",
    "pydantic-settings>=2.9.1",
    "scikit-image==0.18.3",
    "sqlalchemy>=2.0.41",
    "sqlalchemy-json>=0.7.0",
    "streamlit>=1.38.0",
    "torch==2.3.1",
    "torchaudio==2.3.1",
    "torchvision==0.18.1",
    "typer>=0.15.4",
    "typing-extensions>=4.13.2",
]

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true


